Contact page alignment fixed

--- a/src/style.scss
+++ b/src/style.scss
@@ -5,6 +5,14 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600;1,500&display=swap');
 
+// $breakpoints: (
+//   'small':  ( min-width:  640px ),
+//   'medium': ( min-width:  768px ),
+//   'large':  ( min-width: 1024px ),
+//   'xlarge': (min-width:1280px),
+//   '2xlarge': (min-width:1536px)
+// ) !default;
+
 .bginput{
     
     font-family: "Arial";
@@ -142,7 +150,7 @@
 
   
 #carousel {
-  position: fixed;
+  position: absolute;
   height: 200px;
   width: 950px;
   margin: auto;
@@ -215,6 +223,9 @@ $innerlevel1-width:185px;
 }
 .innerlevel0{
   background: rgba(255, 255, 255, 0.8);
+ 
+    
+  
   border-radius: 15px;
   height: $innerlevel0-height;
   width: $innerlevel0-width;
@@ -224,24 +235,26 @@ $innerlevel1-width:185px;
 
 .innerlevel1{
   background: rgba(255, 255, 255, 0.8);
+
   border-radius: 15px;
 
   height: $innerlevel1-height;
   width: $innerlevel1-width;
- 
   
   
+
  
 
 }
 .innerlevel-1{
   background: rgba(255, 255, 255, 0.8);
+ 
   border-radius: 15px;
 
   height: $innerlevel1-height;
   width: $innerlevel1-width;
  
-  
+ 
   
  
 
@@ -257,39 +270,49 @@ $innerlevel1-width:185px;
 // }
 
 .level-1 {
+  background: linear-gradient(39.12deg, #9A54AD 8.28%, #EF757C 47.96%, #F9AF61 85.78%);
+  box-shadow: 0px 0px 55.257px 22.1028px rgba(0, 0, 0, 0.1);
+ 
     height: $level1-height;
     width: $level1-width;
     line-height: $level1-height;
     left: $level-1-left;
     margin-top: 40px;
-    background: linear-gradient(39.12deg, #9A54AD 8.28%, #EF757C 47.96%, #F9AF61 85.78%);
-    box-shadow: 0px 0px 55.257px 22.1028px rgba(0, 0, 0, 0.1);
+  
     border-radius: 25px;
     padding:15px;   
-   
+  
 }
 
 .level0 {
+  background: linear-gradient(39.12deg, #9A54AD 8.28%, #EF757C 47.96%, #F9AF61 85.78%);
+    box-shadow: 0px 0px 55.257px 22.1028px rgba(0, 0, 0, 0.1);
+    
     height: $level0-height;
     width: $level0-width;
     line-height: $level0-height;
     left: $level0-left;
-    background: linear-gradient(39.12deg, #9A54AD 8.28%, #EF757C 47.96%, #F9AF61 85.78%);
-    box-shadow: 0px 0px 55.257px 22.1028px rgba(0, 0, 0, 0.1);
+   
+    
     border-radius: 25px;
-    padding:20px;    
+    padding:20px;   
+    
 }
 
 .level1 {
+  background: linear-gradient(39.12deg, #9A54AD 8.28%, #EF757C 47.96%, #F9AF61 85.78%);
+    box-shadow: 0px 0px 55.257px 22.1028px rgba(0, 0, 0, 0.1);
+ 
     height: $level1-height;
     width: $level1-width;
     line-height: $level1-height;
     left: $level1-left;
     margin-top: 40px;
-    background: linear-gradient(39.12deg, #9A54AD 8.28%, #EF757C 47.96%, #F9AF61 85.78%);
-    box-shadow: 0px 0px 55.257px 22.1028px rgba(0, 0, 0, 0.1);
+    
     border-radius: 25px;
     padding:15px;
+  
+ 
    
 }
 
@@ -385,3 +408,40 @@ $innerlevel1-width:185px;
 //         -ms-user-select: none;  
 //             user-select: none;
 // }
+@media all and (max-width:768px) {
+  .level-1{
+    display: none;
+  }
+  .level1{
+    display: none;
+  }
+
+  .innerlevel-1{
+    display: none;
+  }
+  .innerlevel1{
+    display: none;
+  }
+.arrow
+{
+  display: none;
+}
+.arrow-right{
+  display:none;
+}
+  .level0{
+    height:17rem;
+    width:16rem;
+  
+  }
+  .innerlevel0{
+    height: 13.5rem;
+    width:13.5rem;
+  }
+ 
+  #carousel{
+    height: 5rem;
+    width:2rem;
+    margin-right:40rem;
+  }
+}
